# SIMDsynth

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  simdsynth  simdsynth.cpp
SimdSynthJUCE/: CMakeLists.txt
SimdSynthJUCE/Source/: PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SimdSynth.cpp  SimdSynth.h  SimdSynthCore.h  SimdSynthPluginEditor.h  SimdSynthPluginProcessor.cpp  SimdSynthPluginProcessor.h  SimdSynthProcessor.cpp  SimdSynthProcessor.h
Source/: .PluginProcessor.cpp.swp  DFM1Filter.h  PerformanceUI.cpp  PerformanceUI.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  dfmLUTs.h
lab/: Makefile  README.txt  dfm1_single.cpp
